# systemd_commander

./: .gitignore  CMakeLists.txt  README.md
config/: tui_theme.yaml
include/systemd_commander/: journal_client.hpp  journal_viewer.hpp  process_runner.hpp  systemd_client.hpp  systemd_commander.hpp  tui.hpp
src/: journal_client.cpp  journal_viewer.cpp  journal_viewer_backend.cpp  journal_viewer_screen.cpp  process_runner.cpp  systemd_client.cpp  systemd_commander.cpp  systemd_commander_backend.cpp  systemd_commander_screen.cpp  tui.cpp
test/: journal_client_parse_test.cpp  systemd_client_parse_test.cpp
